WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73955
REGRESSION (
r101838
): Crash in LayerTreeHostCA::initialize() when accelerated drawing is enabled
https://bugs.webkit.org/show_bug.cgi?id=73955
Summary
REGRESSION (r101838): Crash in LayerTreeHostCA::initialize() when accelerated...
Andy Estes
Reported
2011-12-06 15:21:02 PST
REGRESSION (
r101838
): Crash in LayerTreeHostCA::initialize() when accelerated drawing is enabled
Attachments
Patch
(1.79 KB, patch)
2011-12-06 15:28 PST
,
Andy Estes
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2011-12-06 15:21:24 PST
<
rdar://problem/10536766
>
Andy Estes
Comment 2
2011-12-06 15:28:43 PST
Created
attachment 118123
[details]
Patch
Andy Estes
Comment 3
2011-12-06 15:30:01 PST
Committed
r102184
: <
http://trac.webkit.org/changeset/102184
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug