REGRESSION (r101838): Crash in LayerTreeHostCA::initialize() when accelerated drawing is enabled https://bugs.webkit.org/show_bug.cgi?id=73955

Reviewed by Anders Carlsson.

* WebProcess/WebPage/ca/LayerTreeHostCA.cpp:
(WebKit::LayerTreeHostCA::initialize): m_webPage->drawingArea() will be
null here if we are initializing the layer tree host in DrawingArea's
ctor (as is the case when accelerated drawing is enabled), before
WebPage has set its m_drawingArea pointer. Since the layer tree cannot
have been frozen at this point, it's safe to enable layer flush
scheduling if drawingArea() is null.

Canonical link: https://commits.webkit.org/90627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102184 268f45cc-cd09-0410-ab3c-d52691b4dbfc